# EyesRedStrike

./: .gitignore  LICENSE  NOTICE  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt
eyesredstrike/: cli.py
eyesredstrike/core/: hashdb.py  heuristics.py  ioc_update.py  quarantine.py  scanner.py  yara_engine.py
eyesredstrike/data/: iocs.json
eyesredstrike/platform/: persistence.py  processes.py
eyesredstrike/rules/: backdoors.yar  credential_theft.yar  cryptominers.yar  generic_trojans.yar  ransomware.yar  wacatac.yar
